force-app/main/default/objects/ServiceContract/fields/Billable_Account__c.field-meta.xml
<CustomField>
    <fullName>Billable_Account__c</fullName>
    <description>28040 Should be managed via integration</description>
    <inlineHelpText>Field is maintained by integration when there is a Partner on the Contract&apos;s Partner Data table which is of type SP Contract Rel to enforce users who are using the Add Project workflow to select the billable customer account.</inlineHelpText>
    <label>Billable Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Contract Account</fullName>
                <default>true</default>
                <label>Service Contract Account</label>
            </value>
            <value>
                <fullName>Project Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>