force-app/main/default/objects/ServiceContract/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <description>28660</description>
    <inlineHelpText>Contract Type from SAP</inlineHelpText>
    <label>Contract Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blanket</fullName>
            </value>
            <value>
                <fullName>Bid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>