force-app/main/default/objects/ServiceContract/fields/Customer_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference_Number__c</fullName>
    <inlineHelpText>From SAP</inlineHelpText>
    <label>Customer Reference Number</label>
    <type>TextArea</type>
</CustomField>