force-app/main/default/objects/ServiceContract/fields/Lookup_Formula__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Formula__c</fullName>
    <description>28660</description>
    <formula>Account.Name &amp;&quot;-&quot;&amp; Name &amp;&quot;-&quot;&amp; SAP_Service_Contract_Number__c &amp; &quot; (Start Date: &quot;&amp; TEXT( DAY(StartDate ))&amp;&quot;/&quot;&amp;TEXT( MONTH(StartDate ))&amp;&quot;/&quot;&amp;TEXT( YEAR(StartDate ))&amp;&quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field that returns record Account-Contract Name-SAP Contract Number (Start Date)</inlineHelpText>
    <label>Lookup Formula</label>
    <type>Text</type>
</CustomField>