force-app/main/default/objects/ServiceContract/fields/SAP_Service_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Service_Contract_Number__c</fullName>
    <description>28660</description>
    <externalId>true</externalId>
    <inlineHelpText>SAP WBS Number for the Contract</inlineHelpText>
    <label>SAP Service Contract Number</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>