force-app/main/default/objects/ServiceContract/fields/Summarized_Completed_Estimates__c.field-meta.xml
<CustomField>
    <fullName>Summarized_Completed_Estimates__c</fullName>
    <description>This is summary of all NPLUS Job -&gt; Summarized Completed Estimates.</description>
    <inlineHelpText>This is summary of all NPLUS Job -&gt; Summarized Completed Estimates.</inlineHelpText>
    <label>Summarized Completed Estimates</label>
    <summarizedField>NPLUS_Job__c.Summarized_Completed_Estimates__c</summarizedField>
    <summaryForeignKey>NPLUS_Job__c.Service_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>