force-app/main/default/objects/ServiceContract/fields/Summarized_Estimated_Man_Hours__c.field-meta.xml
<CustomField>
    <fullName>Summarized_Estimated_Man_Hours__c</fullName>
    <description>This is a summary of the total value of the Total Estimated Man Hours on all child NPLUS Jobs.</description>
    <inlineHelpText>This is a summary of the total value of the Total Estimated Man Hours on all child NPLUS Jobs.</inlineHelpText>
    <label>Summarized Estimated Man Hours</label>
    <summarizedField>NPLUS_Job__c.Summarized_Estimated_Man_Hours__c</summarizedField>
    <summaryForeignKey>NPLUS_Job__c.Service_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>