force-app/main/default/objects/ServiceContract/fields/Summarized_Estimates__c.field-meta.xml
<CustomField>
    <fullName>Summarized_Estimates__c</fullName>
    <description>This is a summary of the total value of the Subtotal Estimates on all child NPLUS Jobs.</description>
    <inlineHelpText>This is a summary of the total value of the Subtotal Estimates on all child NPLUS Jobs.</inlineHelpText>
    <label>Summarized Estimates</label>
    <summarizedField>NPLUS_Job__c.Summarized_Estimates__c</summarizedField>
    <summaryForeignKey>NPLUS_Job__c.Service_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>