force-app/main/default/objects/ServiceContract/fields/Summarized_Total_Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Summarized_Total_Estimated_Cost__c</fullName>
    <description>This is summary of all NPLUS Job -&gt; Summarized Total Estimated Cost values.</description>
    <inlineHelpText>This is summary of all NPLUS Job -&gt; Summarized Total Estimated Cost values.</inlineHelpText>
    <label>Summarized Total Estimated Cost</label>
    <summarizedField>NPLUS_Job__c.Summarized_Total_Estimated_Cost__c</summarizedField>
    <summaryForeignKey>NPLUS_Job__c.Service_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>