force-app/main/default/objects/ServiceContract/recordTypes/NPLUS_Basic.recordType-meta.xml
<RecordType>
    <fullName>NPLUS_Basic</fullName>
    <active>true</active>
    <description>NPLUS Basic record type for all NPLUS Service Contracts in scope for Mid America today</description>
    <label>NPLUS Basic</label>
</RecordType>