force-app/main/default/objects/ServiceContract/listViews/All_ServiceContracts.listView-meta.xml
<ListView>
    <fullName>All_ServiceContracts</fullName>
    <columns>SAP_Service_Contract_Number__c</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>CONTRACT.STARTDATE</columns>
    <columns>CONTRACT.ENDDATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>Contract_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Service Contracts</label>
</ListView>